// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseControlInput > checkbox input > renders correctly with a hidden label 1`] = `
<div
  class="form-check"
>
  <input
    aria-label="Hello world"
    class="form-check-input"
    id="test"
    type="checkbox"
  />
</div>
`;

exports[`BaseControlInput > checkbox input > renders correctly with a visible label 1`] = `
<div
  class="form-check"
>
  <input
    class="form-check-input"
    id="test"
    label="Hello world"
    type="checkbox"
  />
  <label
    class="label form-check-label label"
    for="test"
  >
    Hello world
  </label>
</div>
`;

exports[`BaseControlInput > checkbox input > renders correctly with an externally provided label 1`] = `
<div>
  <span
    id="test-label"
  >
    Hello world
  </span>
  <div
    class="form-check"
  >
    <input
      aria-labelledby="test-label"
      class="form-check-input"
      id="test"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`BaseControlInput > checkbox input > renders with correct styles when invalid 1`] = `
<div
  class="form-check"
>
  <input
    class="form-check-input is-invalid"
    id="test"
    label="Hello world"
    type="checkbox"
  />
  <label
    class="label form-check-label label"
    for="test"
  >
    Hello world
  </label>
  <small
    class="invalid-feedback"
  >
    Additional message
  </small>
</div>
`;

exports[`BaseControlInput > checkbox input > renders with correct styles when valid 1`] = `
<div
  class="form-check"
>
  <input
    class="form-check-input is-valid"
    id="test"
    label="Hello world"
    type="checkbox"
  />
  <label
    class="label form-check-label label"
    for="test"
  >
    Hello world
  </label>
  <small
    class="valid-feedback"
  >
    Additional message
  </small>
</div>
`;

exports[`BaseControlInput > checkbox input > renders with message correctly 1`] = `
<div
  class="form-check"
>
  <input
    class="form-check-input"
    id="test"
    label="Hello world"
    type="checkbox"
  />
  <label
    class="label form-check-label label"
    for="test"
  >
    Hello world
  </label>
  <small
    class="field-message"
  >
    Additional message
  </small>
</div>
`;

exports[`BaseControlInput > radio input > renders correctly with a hidden label 1`] = `
<div
  class="form-check"
>
  <input
    aria-label="Hello world"
    class="form-check-input"
    id="test"
    type="radio"
  />
</div>
`;

exports[`BaseControlInput > radio input > renders correctly with a visible label 1`] = `
<div
  class="form-check"
>
  <input
    class="form-check-input"
    id="test"
    label="Hello world"
    type="radio"
  />
  <label
    class="label form-check-label label"
    for="test"
  >
    Hello world
  </label>
</div>
`;

exports[`BaseControlInput > radio input > renders correctly with an externally provided label 1`] = `
<div>
  <span
    id="test-label"
  >
    Hello world
  </span>
  <div
    class="form-check"
  >
    <input
      aria-labelledby="test-label"
      class="form-check-input"
      id="test"
      type="radio"
    />
  </div>
</div>
`;

exports[`BaseControlInput > radio input > renders with correct styles when invalid 1`] = `
<div
  class="form-check"
>
  <input
    class="form-check-input is-invalid"
    id="test"
    label="Hello world"
    type="radio"
  />
  <label
    class="label form-check-label label"
    for="test"
  >
    Hello world
  </label>
  <small
    class="invalid-feedback"
  >
    Additional message
  </small>
</div>
`;

exports[`BaseControlInput > radio input > renders with correct styles when valid 1`] = `
<div
  class="form-check"
>
  <input
    class="form-check-input is-valid"
    id="test"
    label="Hello world"
    type="radio"
  />
  <label
    class="label form-check-label label"
    for="test"
  >
    Hello world
  </label>
  <small
    class="valid-feedback"
  >
    Additional message
  </small>
</div>
`;

exports[`BaseControlInput > radio input > renders with message correctly 1`] = `
<div
  class="form-check"
>
  <input
    class="form-check-input"
    id="test"
    label="Hello world"
    type="radio"
  />
  <label
    class="label form-check-label label"
    for="test"
  >
    Hello world
  </label>
  <small
    class="field-message"
  >
    Additional message
  </small>
</div>
`;
